--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
   "name": "com.unity.render-pipelines.universal",
-  "description": "The Universal Render Pipeline (URP) is a prebuilt Scriptable Render Pipeline, made by Unity. URP provides artist-friendly workflows that let you quickly and easily create optimized graphics across a range of platforms, from mobile to high-end consoles and PCs.",
+  "description": "PropelVR's modified URP",
   "version": "17.0.3",
   "unity": "6000.0",
-  "displayName": "Universal RP",
+  "displayName": "PropelVR Universal RP",
   "dependencies": {
     "com.unity.render-pipelines.core": "17.0.3",
     "com.unity.shadergraph": "17.0.3",
@@ -17,16 +17,13 @@
     "render",
     "pipeline"
   ],
-  "samples": [
-    {
-      "displayName": "URP Package Samples",
-      "description": "Collection of scenes showcasing different features of the Universal Render Pipeline.",
-      "path": "Samples~/URPPackageSamples"
-    },
-    {
-      "displayName": "URP RenderGraph Samples",
-      "description": "Collection of scripts with some examples of RenderGraph and how it is used within the Universal Render Pipeline.",
-      "path": "Samples~/URPRenderGraphSamples"
-    }
-  ]
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/Propel-VR/Custom-URP.git"
+  },
+  "author": {
+    "name": "PropelVR",
+    "email": "team@propelvr.ca",
+    "url": "https://propelvr.ca/"
+  }
 }
